# OdooDGIIModule

./: .replit  CAMPOS_VISTA_CORREGIDOS.md  DGII_REPORTS_SETUP.md  DIAGNOSTICO_ODOO.md  INSTALACION_ODOO.md  MODULO_LISTO_ODOO17.md  README.md  SINTAXIS_ODOO17_FIJA.md  XPATH_ODOO17_CORREGIDO.md  __manifest__.py  app.py  demo_app.py  flask_models.py  main.py  pyproject.toml  replit.md  routes.py  test_imports.py  test_module.py
attached_assets/: Pasted--Conversaciones-Contactos-Tableros-Punto-de-venta-Facturaci-n-Compra-Inventario-Manufactura--1752263503756_1752263503763.txt  Pasted-M-dulo-de-NCFs-para-Odoo-17-Rep-blica-Dominicana-Versi-n-Mejorada-Objetivo-Desarrollar-un-m-d-1752259200389_1752259200398.txt  Pasted-Operaci-n-no-v-lida-Error-al-importar-el-m-dulo-OdooDGIIModule-Ocurri-un-error-al-cargar--1752261779653_1752261779657.txt  Pasted-Operaci-n-no-v-lida-Error-al-importar-el-m-dulo-OdooDGIIModule-main-while-parsing-tmp-tmp-1752262861931_1752262861932.txt  Pasted-Operaci-n-no-v-lida-Error-al-importar-el-m-dulo-OdooDGIIModule-main-while-parsing-tmp-tmp-1752263095037_1752263095046.txt  Pasted-Operaci-n-no-v-lida-Error-al-importar-el-m-dulo-OdooDGIIModule-main-while-parsing-tmp-tmp-1752263359214_1752263359220.txt  Pasted-RPC-ERROR-Odoo-Server-Error-Traceback-most-recent-call-last-File-719-line-2561-in-temp-1752354425710_1752354425715.txt  Pasted-RPC-ERROR-Odoo-Server-Error-Traceback-most-recent-call-last-File-719-line-2597-in-temp-1752314377902_1752314377905.txt  (+17 more)
data/: ncf_document_types.xml
instance/: ncf_management.db
models/: __init__.py  account_move.py  (+3 more)
(+28 files in other folders)
