[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "babel>=2.17.0",
    "chardet>=5.2.0",
    "decorator>=5.2.1",
    "docutils>=0.21.2",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "freezegun>=1.5.2",
    "greenlet>=3.2.3",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "libsass>=0.23.0",
    "lxml>=6.0.0",
    "markupsafe>=3.0.2",
    "ofxparse>=0.21",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "polib>=1.2.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyusb>=1.3.1",
    "qrcode>=8.2",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "urllib3>=2.5.0",
    "vobject>=0.9.9",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.5",
    "xlwt>=1.3.0",
]
